# STEM_atomap_GUI

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  config.py  main.py  pipeline_log.txt  pyproject.toml  requirements.txt  script_log.txt
.continue/agents/: new-config-1.yaml  new-config-2.yaml
core/: __init__.py  io_utils.py  lattice.py  line_profile.py  metrics.py  pipeline.py  preprocess.py  stats.py  viz.py  viz_utils.py
docs/: USER_MANUAL.md  overview.md
scripts/: generate_collage.py
tests/: test_pipeline.py
ui_qt/: __init__.py  main_window.py
